@@ -24,3 +24,4 @@
 (cd widgets; ./build.sh $*)
 (cd ajaxlibtest; ./build.sh $*)
 (cd xmldoc; ./build.sh $*)
+(cd employeeadmin; ./build.sh $*)
