@@ -144,5 +144,10 @@ particular example.</p>
 <a href="ajaxlibtest/output/AjaxTest.html">see demo</a> |
 <a href="ajaxlibtest/">source directory</a><p>
 
+<h2>employeeadmin</h2>
+<p>PureMVC demo EmployeeAdmin<br />
+<a href="employeeadmin/output/EmployeeAdmin.html">see demo</a> |
+<a href="employeeadmin/">source directory</a><p>
+
 </body>
 </html>
